style/main.css
html, body{
	margin: 0;
	padding: 0;
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	line-height: 1.4rem;
	font-weight: 300;
	background-color: #F5F5F5
}


* {
  -webkit-user-select: none;
}


#info-button{
	display: none;
}

.made-with-friends{
	padding-top: 30px;
	display: block;
}

.puck{
	width: 74px;
	height: 74px;
	background-size: contain;
	position: absolute;
	left: 50%;
	bottom: 110px;
	/*margin-top: -37px;*/
	margin-left: -37px;
}


.puck.collapsed{
	background-image: url( ../img/expanded-puck.png );
}

a{
	color: #77e4ff;
	text-decoration: none;
}

a:hover{
	color: #77e4ff;
	text-decoration: underline;
}

.button{
	cursor: pointer;
	width: 20px;
	height: 20px;
	position: absolute;
	margin: 20px;	
	right: 0;
	top: 0;
	background-size: cover;
}

.info-button{
	/*background: red;*/
	background-image: url( ../img/info.png );
}

.close-button{
	/*background: green;*/
	background-image: url( ../img/close.png );
}

.puck.expanded{
	background-image: url( ../img/collapsed-puck.png );
}

.relative {
  position: relative;
}



.callout{
	position: absolute;
	text-align: right;
	right: 40px;
	bottom: 40px;
	opacity: 0.35;
	font-size: 12px;
	line-height: 16px;
}

.overlay{
	width: 100%;
	height: 100%;
	background: black;
	color: white;
	opacity: 0.85;
	display:none;
	position: absolute;
	padding: 10%;
	padding-top: 20%;
  	box-sizing: border-box;
}

.container{
	width: 100%;
	height: 100%;
	margin: 0 auto;
}


.mobile-phone{
	position: absolute;
	display: none;
}


.gl{
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
}

#landscape-warning{
	display: none;
}

.rotate-gfx{
	width: 200px;
}

#landscape-warning{
	text-align: center;
	padding-top: 10%;
}

@media only screen and (max-device-width: 1300px) and (orientation: landscape){

	#landscape-warning{
		display: inherit;
	}

	.puck{
		display: none;
	}

	canvas{
		display: none;
	}
}

@media only screen and (min-device-width: 1300px){

	.mobile-phone{
		display: block;
		position: absolute;
	}

	.container{
		width: 406px;
		height: 751px;
	}

	.gl{
		left:39px;
		position: absolute;
		top: 82px;
		width: 326px;
		height: 581px
	}
}

